// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`VideoDisplayComponent applies the correct container class based on variant 1`] = `
<div>
  <div
    class="containerVerticalScroll"
    data-testid="VerticalScroll"
  >
    <div
      class="videoPlayer"
      data-testid="video-player-container"
    >
      <div
        data-options="{"autoplay":false,"aspectRatio":"16:9","controls":true,"fill":true,"fluid":true,"responsive":true,"poster":"poster1.jpg","playbackRates":[0.5,1,1.5,2],"preload":"auto","techOrder":["html5","youtube"],"sources":[{"src":"video1.mp4","type":"video/youtube"}],"audioOnlyMode":false,"audioPosterMode":false}"
        data-testid="mock-video-player-container"
      />
    </div>
    <ul
      class="articles"
      data-testid="articles-list"
    >
      <li>
        <div
          data-testid="in-view"
        >
          <div
            data-testid="interaction"
          >
            <div
              data-testid="with-data"
            >
              <div
                data-testid="article-template"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          data-testid="in-view"
        >
          <div
            data-testid="interaction"
          >
            <div
              data-testid="with-data"
            >
              <div
                data-testid="article-template"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`VideoDisplayComponent renders the video player and articles 1`] = `
<div>
  <div
    class="containerHorizontalScroll"
    data-testid="HorizontalScroll"
  >
    <div
      class="videoPlayer"
      data-testid="video-player-container"
    >
      <div
        data-options="{"autoplay":"any","aspectRatio":"16:9","controls":true,"fill":true,"fluid":true,"responsive":true,"poster":"poster1.jpg","playbackRates":[0.5,1,1.5,2],"preload":"auto","techOrder":["html5","youtube"],"sources":[{"src":"video1.mp4","type":"video/youtube"}],"audioOnlyMode":false,"audioPosterMode":false}"
        data-testid="mock-video-player-container"
      />
    </div>
    <ul
      class="articles"
      data-testid="articles-list"
    >
      <li>
        <div
          data-testid="in-view"
        >
          <div
            data-testid="interaction"
          >
            <div
              data-testid="with-data"
            >
              <div
                data-testid="article-template"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          data-testid="in-view"
        >
          <div
            data-testid="interaction"
          >
            <div
              data-testid="with-data"
            >
              <div
                data-testid="article-template"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
